fixed gap in color

--- a/project-zest/src/Recipe.css
+++ b/project-zest/src/Recipe.css
@@ -52,7 +52,7 @@ html {
    display: flex;
    width: 80%;
    margin: auto;
-   margin-top: 10px;
+   /* margin-top: 10px; */
    flex-direction: row;
    padding-top: 1%;
    padding-bottom: 1%;
